<resources>
    <string name="app_name">BottomNavigationDemo</string>
    <string name="btn_login">Log in</string>
    <string name="edittext_email_login">E-mail</string>
    <string name="edittext_password_login">Password</string>
    <string name="text_notregistered">Don\'t have an account? Click here to register</string>
    <string name="text_gotologin">Already have an account? Click here to login</string>
    <string name="btn_register">Register</string>
    <string name="edittext_confirm_password">Confirm Password</string>
    <string name="btn_logout">Log out</string>


    <string name="seconds">seconds</string>
    <string name="minutes">minutes</string>
    <string name="hours">hours</string>
    <string name="days">days</string>
    <string name="ago">ago</string>

    <string name="camera_caption_hint">Caption</string>
    <string name="camera_upload_button_text">Upload</string>
    <string name="btn_take_photo">Camera</string>
    <string name="btn_select_photo">Gallery</string>
    <string name="text_forgot_pw">Forgot password?</string>

    <string name="navigation_publish">Publish</string>
    <string name="home_feed">Home</string>
    <string name="pic_of_the_day_feed">Pic of the day</string>
    <string name="reset_pwd">Reset password</string>
    <string name="confirm_email">Please confirm your email</string>
    <string name="btn_send_reset">Send Email Reset Link</string>
    <string name="text_login">Go back to login</string>
    <string name="delete_last">Delete your latest pic</string>

</resources>
