<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                             android:layout_height="match_parent">

    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/edittext_email_register" android:inputType="textEmailAddress"
            android:hint="@string/edittext_email_login"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginEnd="32dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="32dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.0"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/edittext_password_register" android:inputType="textPassword"
            android:hint="@string/edittext_password_login"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/edittext_email_register"
            app:layout_constraintStart_toStartOf="@+id/edittext_email_register" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="@+id/edittext_email_register"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/edittext_password2_register" android:inputType="textPassword"
            android:hint="@string/edittext_confirm_password"
            app:layout_constraintStart_toStartOf="@+id/edittext_password_register"
            app:layout_constraintEnd_toEndOf="@+id/edittext_password_register"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintTop_toBottomOf="@+id/edittext_password_register" android:layout_marginTop="16dp"
    />
    <Button
            android:text="@string/btn_register"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btn_register"
            app:layout_constraintStart_toStartOf="@+id/edittext_password2_register"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/edittext_password2_register"
            app:layout_constraintEnd_toEndOf="@+id/edittext_password2_register"/>
    <TextView
            android:text="@string/text_gotologin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/text_gotologin"
            android:textAlignment="center" android:textStyle="bold|italic" android:textAllCaps="false"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/btn_register"
            app:layout_constraintStart_toStartOf="@+id/btn_register"
            app:layout_constraintEnd_toEndOf="@+id/btn_register"/>

</android.support.constraint.ConstraintLayout>