<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                             android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
            android:id="@+id/register_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            style="@style/HeaderBar"
            android:elevation="4dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

        <ImageView android:layout_width="100dp" android:layout_height="match_parent" android:src="@drawable/potdlogo"/>

    </android.support.v7.widget.Toolbar>

    <EditText
            android:layout_width="0dp"
            android:layout_height="43dp"
            android:ems="10"
            android:id="@+id/edittext_email_login"
            app:layout_constraintStart_toStartOf="parent" android:inputType="textEmailAddress"
            android:hint="@string/edittext_email_login"
            android:layout_marginStart="32dp" android:layout_marginEnd="32dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/register_toolbar"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/edittext_password_login" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/edittext_email_login"
            app:layout_constraintStart_toStartOf="@+id/edittext_email_login"
            app:layout_constraintEnd_toEndOf="@+id/edittext_email_login" android:inputType="textPassword"
            android:hint="@string/edittext_password_login"/>
    <Button
            android:text="@string/btn_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btn_register" app:layout_constraintEnd_toEndOf="@+id/edittext_password_login"
            app:layout_constraintStart_toStartOf="@+id/edittext_password_login" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/edittext_password_login"
            android:background="@drawable/roundedbutton"/>
    <TextView
            android:text="@string/text_notregistered"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@+id/btn_register"
            app:layout_constraintEnd_toEndOf="@+id/btn_register" android:id="@+id/text_notregistered"
            android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/btn_register"
            android:textAlignment="center" android:textStyle="bold|italic" android:textAllCaps="false"/>
    <TextView
            android:text="@string/text_forgot_pw"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/text_forgot_pw"
            android:textAlignment="center" android:textStyle="bold|italic" android:textAllCaps="false"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/text_notregistered"
            app:layout_constraintStart_toStartOf="@+id/text_notregistered"
            app:layout_constraintEnd_toEndOf="@+id/text_notregistered"/>
</android.support.constraint.ConstraintLayout>