<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ResetPasswordActivity">

    <android.support.v7.widget.Toolbar
            android:id="@+id/reset_pwd_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            style="@style/HeaderBar"
            android:elevation="4dp"
    >

        <ImageView android:layout_width="100dp" android:layout_height="match_parent" android:src="@drawable/potdlogo"/>

    </android.support.v7.widget.Toolbar>

    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:id="@+id/txt_reset_email"
            app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="35dp"
            app:layout_constraintTop_toBottomOf="@+id/reset_pwd_toolbar" android:layout_marginEnd="32dp"
            android:layout_marginStart="32dp" android:hint="@string/confirm_email"/>
    <Button
            android:text="@string/btn_send_reset"
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:id="@+id/btn_send_reset_pwd"
            app:layout_constraintEnd_toEndOf="@+id/txt_reset_email"
            app:layout_constraintStart_toStartOf="@+id/txt_reset_email" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/txt_reset_email" android:background="@drawable/roundedbutton"/>
    <TextView
            android:text="@string/text_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/text_go_to_login"
            app:layout_constraintEnd_toEndOf="@+id/btn_send_reset_pwd"
            app:layout_constraintStart_toStartOf="@+id/btn_send_reset_pwd" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/btn_send_reset_pwd"/>
</android.support.constraint.ConstraintLayout>